# AdePT_examples

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.github/workflows/: clang-format-test.yml
docs/: README.md  example_template.md
examples/: CMakeLists.txt  README.md
