# SPDX-FileCopyrightText: 2025 CERN for the benefit of the AdePT project
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.25)

# Placeholder. Actual examples will go here.
#
# Example skeleton for later:
#
# add_executable(example_minimal src/example_minimal.cu)
#
# target_compile_features(example_minimal PRIVATE cxx_std_20)
#
# cuda_rdc_target_include_directories(example_minimal
#   PRIVATE
#     ${AdePT_INCLUDE_DIRS}
# )
#
# cuda_rdc_target_link_libraries(example_minimal
#   PRIVATE
#     ${AdePT_LIBRARIES}
# )
